--- a/recap/nodejs/recap/section20/views/shop/orders.ejs
+++ b/recap/nodejs/recap/section20/views/shop/orders.ejs
@@ -86,7 +86,7 @@
                                         <span class="orders__result--header--list--item--order-details">
                                             <a href="" class="main_link">View order details</a>
                                             <span aria-hidden="true" class="orders__result--header--list--item--order-details--separator"> | </span>
-                                            <a href="" class="main_link">Invoice</a>
+                                            <a href="/orders/<%=order._id%>" class="main_link">Invoice</a>
                                         </span>
                                     </li>
 
