--- a/recap/nodejs/recap/section20/views/shop/product-details.ejs
+++ b/recap/nodejs/recap/section20/views/shop/product-details.ejs
@@ -170,6 +170,7 @@
                     </span>
                         <button class="content__item__ordering--yellow-button yellow-button" type="submit">Add to Cart</button>
                         <button class="content__item__ordering--orange-button orange-button" type="submit">Buy Now</button>
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <input type="hidden" name="productId" value="<%= product.id %>">
                 <!-- </form> -->
 
