--- a/recap/nodejs/recap/section20/views/admin/admin-products.ejs
+++ b/recap/nodejs/recap/section20/views/admin/admin-products.ejs
@@ -2,6 +2,7 @@
 <%- include("../includes/html-head.ejs") %>
 
 <link rel="stylesheet" href="/css/admin-products.css">
+<link rel="stylesheet" href="/css/pagination.css">
 
 
 
@@ -15,7 +16,7 @@
 
         <aside class="main__main__top-bar" aria-label="products amount and sort by">
             <span class="main__main__top-bar-container">
-                <span><span aria-label="number of pages the results are spread">1–16 </span>of over 4,000 results</span>
+                <span><span aria-label="number of pages the results are spread">Page <%=currentPage%> of <%=lastPage%></span>, displaying <%=totalProducts%> products</span>
                 <select class="main__main__top-bar--sort" aria-label="sort products drop down select">
                     <option>Sort by: Featured</option>
                 </select>
@@ -181,8 +182,20 @@
                     <% } %>
                     
 
+                    <%- include('../includes/pagination.ejs', 
+                    {
+                        currentPage: currentPage,
+                        nextPage: nextPage,
+                        previousPage: previousPage,
+                        lastPage: lastPage,
+                        hasNextPage, hasNextPage,
+                        hasPreviousPage: hasPreviousPage
+                    }) %>
+    
+                    
 
                 </div>
+
             </div>
         </div>
 
