--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -8,10 +8,82 @@
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
 */
 
+html { 
+  box-sizing: border-box; 
+}
 
+*, *::before, *::after { 
+  box-sizing: inherit;
+  margin: 0; 
+  padding: 0; 
+}
 
+img {
+    max-width: 100%;
+}
 
+.myMain {
+  min-height: 140vh;
+  width: 100vw;
+  position: relative;
+  pointer-events: none;
 
+  background-image: url("https://images.unsplash.com/photo-1554995207-c18c203602cb?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8NHx8fGVufDB8fHx8fA%3D%3D");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 0;
+  opacity: 1;
+}
+
+.myMain_dark {
+  filter: brightness(0.1);
+}
+
+.myMain::before {
+  content: "";
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  z-index: 2;
+  position: absolute;
+
+}
+
+.myMain::after {
+  content: "";
+  background-color: #8ec5fc29;
+background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
+  /* opacity: 0.6; */
+
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+  position: absolute;
+}
+
+.app2 {
+  padding-top: 2rem;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+
+}
 
 
 @media screen and (max-width: 640px) {
