--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -85,6 +85,72 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
 
 }
 
+.toggle-animation {
+  width: 100%;
+  transition-property: width;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+}
+
+.toggle-animation2 {
+  width: 1.5rem;
+  transition-property: width;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+}
+
+
+
+
+.toggle-animation-right {
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-name: right-toggle;
+  animation-fill-mode: forwards;
+  animation-direction: normal;
+
+
+}
+
+.toggle-animation-left {
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-name: left-toggle;
+  animation-fill-mode: forwards;
+  animation-direction: normal;
+
+}
+
+@keyframes right-toggle {
+  from {
+    /* margin-right: 0; */
+    /* margin-left: 1.9rem; */
+    /* margin-right: 0; */
+
+  }
+  to {
+    /* margin-right: 1.9rem; */
+    /* margin-left: 0; */
+    /* margin-right: auto; */
+    padding-right: 2rem;
+
+  }
+}
+
+@keyframes left-toggle {
+  from {
+    /* margin-left: 0; */
+    /* margin-right: auto; */
+
+  }
+  to {
+    /* margin-left: auto; */
+    /* margin-right: 0.25rem; */
+    /* margin-right: 0; */
+    padding-left: 2rem;
+
+  }
+}
 
 @media screen and (max-width: 640px) {
   .main {
