--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -22,10 +22,13 @@ img {
     max-width: 100%;
 }
 
+/*///////////////////////////////////////////////////////*/
+/* home page children container */
+
 .myMain {
   min-height: 140vh;
   width: 100%;
-  position: relative;
+  /* position: relative; */
   pointer-events: none;
 
   background-image: url("https://images.unsplash.com/photo-1554995207-c18c203602cb?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8NHx8fGVufDB8fHx8fA%3D%3D");
@@ -69,6 +72,8 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
   position: absolute;
 }
 
+
+
 .app2 {
   padding-top: 2rem;
   width: 100%;
@@ -84,6 +89,9 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
   top: 0;
 
 }
+
+/*///////////////////////////////////////////////////////*/
+/* nav bar theme button toggle animation */
 
 .toggle-animation-light {
   width: 100%;
@@ -177,6 +185,82 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
 }
 
 
+/*///////////////////////////////////////////////////////*/
+/* main page hero component */
+
+.main__hero {
+  height: 100vh;
+  width: 100%;
+
+
+
+}
+
+.main__hero{
+  position: relative;
+  overflow: hidden;
+}
+
+.main__hero::before {
+  background-image: url("/images/fn-2.png");
+  
+  /* background-color: rgba(255, 0, 0, 0.0); */
+  position: absolute;
+  content: "";
+  /* top: -50%; */
+  /* left: 50%; */
+
+  /* background-image: url("/images/furniture.avif"); */
+  top: 10%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  /* opacity: 0.15; */
+  /* filter: grayscale(0.6); */
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  /* animation-name: hero_animation;
+  animation-duration: 300s;
+  animation-timing-function: linear; */
+  /* animation-fill-mode: both; */
+  /* animation-iteration-count: infinite; */
+
+}
+
+@keyframes hero_animation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+
+}
+
+.main__hero__text-container {
+  position: relative;
+
+}
+
+
+
+.glass-container-background-1 {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.07);
+
+}
+
+
+
+
+
 @media screen and (max-width: 640px) {
   .main {
     padding: 0;
@@ -184,6 +268,15 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
 }
 
 /* Tailwind Styles */
+
+.gradient-text-accent {
+  @apply bg-gradient-to-r from-theme-text-bright dark:from-theme-text-bright via-theme-text-bright dark:via-theme-text-brighter dark:to-theme-text-brighter to-theme-text-brightest;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  
+}
+
 
 .app {
   @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
