--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -201,7 +201,7 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
   overflow: hidden;
 }
 
-.main__hero::before {
+.main__hero-2 {
   background-image: url("/images/fn-2.png");
   
   /* background-color: rgba(255, 0, 0, 0.0); */
@@ -241,11 +241,35 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
 }
 
 .main__hero__text-container {
-  position: relative;
+  /* position: relative; */
+  position: absolute;
+  top: 35%;
 
 }
 
 
+.hero-brush-mask {
+  mask-image: url("/images/brush.png");
+  mask-size: fill;
+  mask-repeat: no-repeat;
+  position: absolute;
+  mask-position: 50% 55%;
+  overflow: hidden;
+
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+
+  opacity: 0.2;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+/*Home Welcome Text*/
 
 .glass-container-background-1 {
   background: rgba(255, 255, 255, 0.05);
@@ -257,7 +281,35 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
 
 }
 
+.box-shadow-1 {
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
+}
+
+.slideAnimation {
+  animation-name: slideAnimation_keyframe;
+  animation-duration: 1.25s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slideAnimation_keyframe {
+  0% { 
+    opacity: 1;
+  }
+
+  45% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+
+
+}
 
 
 
