--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -437,6 +437,48 @@ background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
 } */
 
 
+/*loading icon animation*/
+
+
+.pulse_loading {
+  animation-name: pulseLoading_keyframe;
+  animation-duration: 1.75s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes pulseLoading_keyframe {
+  0% { 
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  50%{
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+.fadeOut_loading {
+  animation-name: fadeOutLoading_keyframe;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOutLoading_keyframe {
+  0% { 
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
 
 @media screen and (max-width: 640px) {
   .main {
