--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -375,7 +375,7 @@ img {
 /* main area */
 .glass-container-background-2 {
   background: rgba(255, 255, 255, 0.35);
-  border-radius: 16px;
+  /* border-radius: 16px; */
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -570,6 +570,7 @@ img {
 }
 
 /* Tailwind Styles */
+
 
 .gradient-text-accent {
   @apply bg-gradient-to-r from-theme-text-bright dark:from-theme-text-bright via-theme-text-bright dark:via-theme-text-brighter dark:to-theme-text-brighter to-theme-text-brightest;
