--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -563,6 +563,69 @@ img {
 
 
 
+.myMain3 {
+  background-image: url("https://images.unsplash.com/photo-1554995207-c18c203602cb?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8NHx8fGVufDB8fHx8fA%3D%3D");
+  background-position: top;
+  background-size:200%;
+  background-repeat: repeat;
+  z-index: 0;
+  opacity: 1;
+  position: relative;
+}
+
+
+.myMain_dark3 {
+  filter: brightness(0.1);
+}
+
+.myMain3::before {
+  content: "";
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  z-index: 2;
+  position: absolute;
+
+}
+
+.myMain3::after {
+  content: "";
+  background-color: #8ec5fc29;
+  background-image: linear-gradient(62deg, #8ec5fca2 0%, #e0c3fc22 100%);
+  /* opacity: 0.6; */
+
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+  position: absolute;
+}
+
+.centered_centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 640px) {
   .main {
     padding: 0;
