allow rendering the filtered properties from the search/filter in the all properties page, clear or reset filter results, style input/select elements, add more filters

--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -428,6 +428,13 @@ img {
   background-size: 50%;
 }
 
+.down_caret {
+  background-image: url("/icons/arrow-down-grey.svg");
+  background-position: 94%, center;
+  background-repeat: no-repeat;
+  background-size: 0.6rem;
+}
+
 
 /* .latest_property {
   width: 60vmin;
