--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -491,6 +491,26 @@ img {
   }
 }
 
+.pulse_loading2 {
+  animation-name: pulseLoading_keyframe2;
+  animation-duration: 1.75s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+}
+
+@keyframes pulseLoading_keyframe2 {
+  0% { 
+    opacity: 1;
+  }
+  50%{
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .fadeOut_loading {
   animation-name: fadeOutLoading_keyframe;
   animation-duration: 1s;
