Add a custom scroll bar with a dissapearing timeout effect

--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -642,10 +642,78 @@ img {
 }
 
 
+/* scroll bars */
+.light_scroll {
+  background-color: #e2e2e2;
+}
+
+html.light_scroll::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+html.light_scroll::-webkit-scrollbar-track {
+  background-color: #c8c8c8;
+}
+
+html.light_scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #8e002f46;
+}
 
 
 
 
+.dark_scroll {
+  background-color: #000000;
+}
+
+html.dark_scroll::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+html.dark_scroll::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #1d1d1d;
+}
+
+html.dark_scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #8e002f46;
+}
+
+
+
+
+html.hide_scroll_light::-webkit-scrollbar {
+  /* display: none; */
+  background-color: #a3a9b5;
+  width: 6px;
+  height: 6px;
+}
+html.hide_scroll_light::-webkit-scrollbar-thumb {
+  background-color: #a3a9b5;
+}
+
+
+
+html.hide_scroll_dark::-webkit-scrollbar {
+  /* display: none; */
+  background-color: #111111;
+  width: 6px;
+  height: 6px;
+}
+html.hide_scroll_dark::-webkit-scrollbar-thumb {
+  background-color: #111111;
+}
+
+/* keep the components centered because of the 6px scroll */
+@media screen and (min-width: 640px) {
+  #children_container {
+    margin-left: 6px;
+  }
+}
 
 
 
@@ -658,7 +726,6 @@ img {
     padding: 0;
   }
 }
-
 /* Tailwind Styles */
 
 
