--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -37,7 +37,7 @@ img {
   content: "";
   display: block;
   position: absolute;
-  background: #0044ff0f;
+  /* background: #0044ff0f; */
   width: 100%;
   height: 100%;
   bottom: 0;
@@ -51,11 +51,15 @@ background: linear-gradient(
   rgba(0, 13, 132, 0.12) 15%, 
    rgba(0, 68, 255, 0.075) 100%);
 
-}
+} 
 
 .earth_ambient {
   background-color: rgba(0, 13, 132, 0.09);
 }
+
+
+
+
 
 .fadeIn_animation {
   animation-name: fadeIn_keyframe;
