Clean up for final buildup, Add a Nav, Hero component with an animated Character model

--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -25,6 +25,67 @@ img {
 }
 
 
+
+.gradient_text_1 {
+  background: -webkit-linear-gradient(
+    
+  55deg, 
+  
+  rgba(83,152,191,255)
+  
+  0%, 
+  
+  rgba(57,208,183,255)
+
+  100%
+  );  
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.gradient_text_hover_1 {
+
+}
+
+
+.gradient_text_hover_1:hover, .gradient_text_hover_1:focus {
+  background: -webkit-linear-gradient(
+    
+  55deg, 
+  
+  rgba(83,152,191,255)
+  
+  20%, 
+  
+  rgba(57,208,183,255)
+
+  100%
+  );  
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.gradient_nav_animation {
+  animation: Animation 20s ease infinite;
+  background-size: 200% 200%;
+  /* background: linear-gradient(130deg, #ff7e00, #ffffff, #5cff00); */
+
+
+}
+
+@keyframes Animation { 
+  0%{background-position:10% 0%}
+  50%{background-position:91% 100%}
+  100%{background-position:10% 0%}
+}
+
+
+
+
+
+
+
 /*///////////////////////////////////////////*/
 /* to set some overlay over the earth model */
 .earth-model {
