--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -549,10 +549,17 @@ background: -webkit-linear-gradient(
 }
 
 .centered_centered {
-  position: fixed;
-  top: 30%;
-  left: 30%;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.centered_centered2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0%);
 }
 
 
