Add a goals list to the about page

--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -596,6 +596,10 @@ background: -webkit-linear-gradient(
   @apply text-3xl lg:text-4xl font-bold gradient_text_1
 }
 
+.BoldHeader {
+  @apply text-3xl lg:text-4xl
+}
+
 .normalHeader {
   @apply text-2xl font-normal
 } 
